--- a/templates/base.html
+++ b/templates/base.html
@@ -122,9 +122,17 @@
             </div>
         </header>
         <!-- Toast Messages -->
+        {% if messages %}
         <div class="site-message-container">
-
+            {% for message in messages %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toast_notifications/toast_error.html' %}
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
         </div>
+        {% endif %}
 
         {% block page_header %}
         {% endblock %}
@@ -133,6 +141,9 @@
         {% endblock %}
 
         {% block postloadjs %}
+            <script type="text/javascript">
+                $('.toast').toast('show');
+            </script>
         {% endblock %}
     </body>
 </html>
