--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -65,7 +65,7 @@
                             <div class="card-body">
                                 <p class="product-name mb-0">{{ product.name }}</p>
                             </div>
-                            <div class="card-footer bg-white pt-0 border-0 text-left">
+                            <div class="card-footer pt-0 border-0 text-left">
                                 <div class="row">
                                     <div class="col">
                                         <p class="product-price">£{{ product.price }}</p>
