--- a/static/css/base.css
+++ b/static/css/base.css
@@ -171,7 +171,6 @@ select#sort-selector {
     top: 13px;
     right: 13px;
     z-index: 99999999999;
-    background-color: black;
 }
 .custom-toast {
     overflow: visible;
@@ -182,41 +181,65 @@ span.exit.button {
     text-decoration: underline;
 }
 
-.bg-white {
+.toast-header {
     color: black;
     font-size: 15px;
 }
 
-/*---------- Danger toast ----------*/
+/*---------- Toast - cappers ----------*/
+
 .w-100.toast-capper.danger {
     background-color: #ba2121;
     height: 13px;
 }
 
-/*---------- Warning toast ----------*/
 .w-100.toast-capper.warning {
     background-color: #e2970f;
     height: 13px;
 }
 
+.w-100.toast-capper.info {
+    background-color: #063ebb;
+    height: 13px;
+}
 
 /*--------------- Individual Products Page ---------------*/
 
-p.product_name {
+.card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.25rem;
+    background-color: black;
     color: #fafafa;
-    font-size: 24px;
-    font-family: 'Almarai';
 }
 
-small.product_rating {
+.card-footer.pt-0.border-0.text-left {
+    background-color: black;
     color: #fafafa;
-    font-size: 19px;
-    font-family: 'Almarai';
+}
+
+p.product_name.mb-0 {
+    color: #fafafa;
+    font-size: 27px;
 }
 
 p.product_price.text-left {
-    color: #f0f005;
-    font-size: 36px;
+    color: #fafafa;
+    font-size: 33px;
+}
+
+small.product_rating {
+    font-size: 19px;
+    font-family: 'Almarai', sans-serif;
+}
+
+p.product-category-bottom {
+    font-size: 18px;
+}
+
+p.product-price {
+    font-size: 33px;
     font-family: 'Almarai';
 }
 
@@ -243,9 +266,9 @@ hr.page-breaker {
     border-top: 1px solid #fafafa;
 }
 
-p.details-header {
+p.details-header.mb-4 {
     color: #fafafa;
-    font-size: 22px;
+    font-size: 25px;
     font-family: 'Almarai';
 }
 
