--- a/templates/includes/toast_notifications/toast_info.html
+++ b/templates/includes/toast_notifications/toast_info.html
@@ -1,8 +1,8 @@
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-warning"></div>
-    <div class="w-100 toast-capper warning"></div>
+    <div class="arrow-up arrow-info"></div>
+    <div class="w-100 toast-capper info"></div>
     <div class="toast-header">
-        <strong class="mr-auto">Slow down there!</strong>
+        <strong class="mr-auto">Did you know?....</strong>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
             <span class="exit button" aria-hidden="true">&times;</span>
         </button>
