Format base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,10 +67,10 @@
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                         <li class="list-inline-item dropdown">
                             <!-- parent menu -->
-                            <a class="text-white  nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <div class="text-center">
                                     <div><i class="far fa-user fa-lg"></i></div>
-                                    <p class="my-0">My Account</p>
+                                    <p class="account-button my-0">My Account</p>
                                 </div>
                             </a>
                             <div class="dropdown-menu border-0" aria-labelledby="user-options">
