--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
                         </li>
                         <!-- shopping bag link -->
                         <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link" href="">
+                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link" href="{% url 'bag' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-cart-arrow-down"></i></div>
                                     <p class="my-0">
