--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -40,7 +40,7 @@
     </li>
     <!-- to access the shopping bag -->
     <li class="list-inline-item">
-        <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
+        <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'bag' %}">
             <div class="text-center text-white">
                 <div><i class="fas fa-cart-arrow-down"></i></div>
                 <p class="my-0">
