--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -12,7 +12,7 @@
 {% block content %}
 <!-- page header -->
 <div class="overlay"></div>
-    <div class="container-fluid mb-2">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
                 <hr>
@@ -21,9 +21,23 @@
             </div>
         </div>
         <div class="container main-shopping-container">
-
+            <div class="row">
+                <div class="col">
+                    {% if bag_items %}
+                        <div class="table-responsive rounded"></div>
+                    {% else %}
+                        <p class="text-white">No items currently in your shopping bag</p>
+                        <a href="{% url 'products' %" class="btn btn-black rounded-0 text-uppercase mt-4">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="text-uppercase">Keep Shopping</span>
+                        </a>
+                    {% endif %}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
