--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -26,8 +26,8 @@
                     {% if bag_items %}
                         <div class="table-responsive rounded"></div>
                     {% else %}
-                        <p class="text-white mb-5">No items currently in your shopping bag</p>
-                        <a href="{% url 'products' %" class="continue-shopping-button mt-4">
+                        <p class="text-white mb-5 text-center">No items currently in your shopping bag</p>
+                        <a href="{% url 'products' %" class="continue-shopping-button mt-4 text-center">
                             <span class="text-uppercase">Continue Shopping</span>
                         </a>
                     {% endif %}
