--- a/static/css/base.css
+++ b/static/css/base.css
@@ -373,10 +373,10 @@ input.btn.btn-black.text-uppercase {
     padding: 7px;
 }
 
-i.fas.fa-chevron-left {
-    color: #fafafa;
-    margin-right: 3px;
-}
+/*---------- Shopping bag page ----------*/
+
+
+
 
 /*--------------- Media Queries ---------------*/
 
