--- a/templates/base.html
+++ b/templates/base.html
@@ -116,7 +116,7 @@
             <div id="delivery-banner" class="row text-center">
                 <div class="col delivery-offer">
                     <h4 class="logo-font my-1">
-                        Delivery on us if you spend over £{{ free_delivery_threshold }}!
+                        Delivery on us if you spend over £{{ free_delivery_threshold }}
                     </h4>
                 </div>
             </div>
