--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,7 +29,7 @@
             <div class="image-container my-5">
                 {% if product.image %}
                     <a href="{{ product.image.url }}" target="_blank">
-                         <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
                     </a>
                     {% else %}
                     <a href="">
@@ -65,7 +65,7 @@
                         <p class="detail_03">{{ product.detail_03 }}</p>
                     </div>
                 <!-- Quantity selector -->
-                <form class="form" action="" method="POST"></form>
+                <form class="form" action="{% url 'add_item' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
@@ -80,10 +80,7 @@
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input" type="number"
-                                        name="quantity" value="1" min="1" max="99"
-                                        data-item_id="{{ product.id }}"
-                                        id="id_qty_{{ product.id }}">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
                                         <button class="increment-qty btn btn-black rounded-0"
                                             data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
@@ -97,13 +94,12 @@
                         </div>
                         <!-- Add to shopping bag & keep shopping button -->
                         <div class="col{% if s %}-12 mt-2{% endif %}">
-                            <a href="{% url 'products' %}" class="continue-shopping-button mt-4">
-                                <span class="text-uppercase">Continue Shopping</span>
+                            <a href="{% url 'products' %}" class="continue-shopping-button mt-5">
+                                <span class="text-uppercase mt-5">Continue Shopping</span>
                             </a>
                             <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-4" value="Add to Bag">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
-
                         </div>
                     </form>
                 </div>
