--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,9 +51,9 @@
                         <a class="size-guide-text" href="https://cdn.shopify.com/s/files/1/0040/5251/6910/files/Craft_size_guide_1024x1024.jpg?v=1595333114" 
                             target="_blank"><i class="fas fa-ruler-combined"></i><br>  Size Guide</a>
                         <select class="form-control rounded-0" name="product_size" id="id_product_size">
-                            <option value="extra small">Extra Small</option>
+                            <option value="extra small" selected>Extra Small</option>
                             <option value="small">Small</option>
-                            <option value="medium" selected>Medium</option>
+                            <option value="medium">Medium</option>
                             <option value="large">Large</option>
                             <option value="extra large">Extra Large</option>
                         </select>
