--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -1,40 +1,83 @@
 {% extends "base.html" %}
 {% load static %}
 
+
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
     </div>
-</div>
 {% endblock %}
 
 {% block content %}
-<!-- page header -->
-<div class="overlay"></div>
-    <div class="container-fluid">
+    <div class="overlay"></div>
+    <div class="container mb-2">
         <div class="row">
-            <div class="col mb-5">
+            <div class="col">
                 <hr>
-                <h2 class="page-title text-center mb-4">Your shopping bag</h2>
-                <hr class="page-breaker">
+                <h2 class="logo-font mb-4">Shopping Bag</h2>
+                <hr>
             </div>
         </div>
-        <div class="container main-shopping-container">
-            <div class="row">
-                <div class="col">
-                    {% if bag_items %}
-                        <div class="table-responsive rounded"></div>
-                    {% else %}
-                        <p class="text-white mb-5 text-center">No items currently in your shopping bag</p>
-                        <a href="{% url 'products' %" class="continue-shopping-button mt-4 text-center">
-                            <span class="text-uppercase">Continue Shopping</span>
-                        </a>
-                    {% endif %}
+        <div class="row">
+            <div class="col">
+                {% if bag_items %}
+                    <div class="table-responsive rounded">
+                        <table class="table table-sm table-borderless">
+                            {% for item in bag_items %}
+                                <tr>
+                                    <td class="p-3 w-25">
+                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="product-name my-0">{{ item.product.name }}
+                                        <p class="product-code my-0">Code: {{ item.product.sku|upper }}</p>
+                                        <p class="product-price my-0">£ {{ item.product.price }}</p>
+                                        <p class="product-quantity my-0">Qty: {{ item.quantity }}</p>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            <tr>
+                                <td colspan="5" class="pt-5 text-right">
+                                    <h6>Bag Total: ${{ total|floatformat:2 }}</h6>
+                                    <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
+                                    <h4 class="mt-4">Grand Total: ${{ grand_total|floatformat:2 }}</h4>
+                                    {% if free_delivery_delta > 0 %}
+                                        <p class="mb-1 text-danger">
+                                            You could get free delivery by spending just £{{ free_delivery_delta }} more!
+                                        </p>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Keep Shopping</span>
+                                    </a>
+                                    <a href="" class="btn btn-black rounded-0 btn-lg">
+                                        <span class="text-uppercase">Secure Checkout</span>
+                                        <span class="icon">
+                                            <i class="fas fa-lock"></i>
+                                        </span>
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
-                </div>
+                {% else %}
+                    <p class="lead mb-5">Your bag is empty.</p>
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
+                {% endif %}
             </div>
         </div>
     </div>
 {% endblock %}
-
