Added width of 100% to mobile phone screens for image picture in shopping bag

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -450,6 +450,10 @@ and (max-device-width : 480px) {
         margin-bottom: 15px;
     }
 
+    .image-container.w-25 {
+        width: 100% !important;
+    }
+
     
 }
 
