Added a new Size field with custom class and an if/else statement to target products that have sizes

--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -33,6 +33,7 @@
                                         <p class="bag-product-name">{{ item.product.name }}
                                             <hr class="page-breaker">
                                         <p class="bag-product-price">£ {{ item.product.price }}</p>
+                                        <p class="bag-product-size">Size: {% if item.product_sizes %}{{ item.size|upper }}{% else %}{% endif %}</p>
                                         <p class="bag-product-code">Code: {{ item.product.sku|upper }}</p>
                                         <p class="bag-product-quantity">Qty: {{ item.quantity }}</p>
                                     </td>
